syntax = "proto3";

option java_package = "grpc";

service StepController{
  rpc addStep(StepDTO) returns (StepObjDTO);
  rpc getStepsByRecipeId(IdRecipeRequest) returns (StepsDTO);
}

message StepServerResponse{
  int32 code = 1;
  string msg = 2;
}

message StepsDTO{
  repeated StepDTO steps=1;
  StepServerResponse serverResponse = 2;
}

message StepDTO{
  int32 idStep = 1;
  int32 idRecipe = 2;
  string description = 3;
}

message StepObjDTO{
  StepDTO step = 1;
  StepServerResponse serverResponse = 2;
}

message ListStepDTO{
  repeated StepDTO steps = 1;
  StepServerResponse serverResponse = 2;
}

message IdRecipeRequest{
  int32 idrecipe = 1;
}